Little fix for button width on mobile

--- a/assets/css/games.css
+++ b/assets/css/games.css
@@ -50,7 +50,7 @@ header {
 
 #reload {
     display: none;
-    width: 25vw;
+    min-width: 25vw;
 }
 
 #cheat {
@@ -65,6 +65,7 @@ header {
     position: absolute;
     top: 1vh;
     right: 1vw;
+    min-width: unset;
     width: auto;
     padding: 0.5vh;
     font-family: initial;
@@ -203,6 +204,7 @@ header {
 }
 
 .keyboardButton {
+    min-width: unset;
     width: 3.5vw;
     margin: 1.5vh;
     border-radius: 0;
