--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,11 +74,11 @@ body {
 #gameList {
     display: flex;
     justify-content: center;
-    padding: 2vh;
+    padding: 2vh 0;
 }
 
 .gameButton {
-    width: 15vw;
+    min-width: 15vw;
     margin: 0 2vh;
     padding: 2vh;
     border: 2px solid transparent;
